[gd_scene load_steps=5 format=3 uid="uid://vl0gmttgj1ap"]

[ext_resource type="Script" uid="uid://u3fvyx7rah4p" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="PackedScene" uid="uid://drri3stggeekr" path="res://scenes/fade_transition.tscn" id="2_ekxnf"]
[ext_resource type="AudioStream" uid="uid://cg4gbqkijyc1s" path="res://assets/sfx/themes/stuck.ogg" id="3_bqqt6"]

[sub_resource type="VideoStreamTheora" id="VideoStreamTheora_ekxnf"]
file = "res://assets/videos/mainmenuconcept.ogv"

[node name="Main Menu" type="Node2D"]
script = ExtResource("1_l6cm7")

[node name="BGPlayer" type="VideoStreamPlayer" parent="."]
offset_right = 1150.0
offset_bottom = 646.0
stream = SubResource("VideoStreamTheora_ekxnf")
autoplay = true
expand = true
loop = true

[node name="Button Manager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Start" type="Button" parent="Button Manager"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 0
offset_left = 324.0
offset_top = 230.0
offset_right = 824.0
offset_bottom = 295.0
theme_override_font_sizes/font_size = 41
text = "Start"

[node name="Options" type="Button" parent="Button Manager"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 0
offset_left = 324.0
offset_top = 314.0
offset_right = 824.0
offset_bottom = 379.0
theme_override_font_sizes/font_size = 41
text = "Options"

[node name="Quit" type="Button" parent="Button Manager"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 0
offset_left = 324.0
offset_top = 398.0
offset_right = 824.0
offset_bottom = 463.0
theme_override_font_sizes/font_size = 41
text = "Quit"

[node name="Fade Transition" parent="." instance=ExtResource("2_ekxnf")]
visible = false

[node name="fade_timer" type="Timer" parent="Fade Transition"]

[node name="MainTheme" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_bqqt6")

[connection signal="pressed" from="Button Manager/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Button Manager/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Button Manager/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="Fade Transition/fade_timer" to="." method="_on_fade_timer_timeout"]
